sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:12: error: not found: value Valmin
      if(getValeur(k)<Valmin){
                      ^AlgSelectionSort:13: error: not found: value Valmin
        Valmin=getValeur(k)
        ^